# pymp305

./: .gitignore  CHANGELOG.md  LICENSE  PROTOCOL.md  README.md
.github/workflows/: publish.yml  test.yml
gui/: README.md  requirements.txt  run.py
gui/mp305gui/: __init__.py  app.py  backend.py  theme.py  worker.py
python/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
python/examples/: basic.py  ble.py  experimental.py  ota_inspect.py
python/pymp305/: __init__.py  ble.py  commands.py  device.py  ota.py  protocol.py  responses.py
python/pymp305b/: __init__.py  device.py  protocol.py  responses.py
python/tests/: test_advanced.py  test_endtoend.py  test_experimental.py  test_ota.py  test_protocol.py
tools/: fetch_firmware.py  fetch_weblink_sources.py  ota_endpoints.json
