[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pymp305"
version = "0.1.0"
description = "Python driver for the ISDT MP305 (MP305A/MP305B) smart bench power supply over USB-HID"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["hidapi>=0.14"]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["pymp305"]
