[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pymp305"
version = "0.2.0"
description = "Python driver for the ISDT MP305 (MP305A/MP305B) smart bench power supply over USB-HID"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "nemanjan00", email = "nemanjan00@gmail.com" }]
keywords = ["isdt", "mp305", "mp305a", "mp305b", "power-supply", "psu", "usb", "hid", "bench"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = ["hidapi>=0.14"]

[project.urls]
Homepage = "https://github.com/nemanjan00/pymp305"
Repository = "https://github.com/nemanjan00/pymp305"
Issues = "https://github.com/nemanjan00/pymp305/issues"

[project.optional-dependencies]
ble = ["bleak>=0.21"]
test = ["pytest"]

[tool.setuptools]
packages = ["pymp305"]
